<resources>
    <string name="app_name">Practica_final</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mi_tienda">MI TIENDA</string>
    <string name="ofertas">OFERTAS</string>
    <string name="fragmentofertas">en esta parte ira una lista de imagenes con el precio de cada producto</string>
    <string name="fragmentienda">en esta parte se vera una lista de imagenes que contendra cada producto agregado por el usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar">Cerrar</string>
    <string name="eliminar">se vera un list view con cada producto actual, se seleccionan los productos que se quieren eliminar</string>
    <string name="agregar">en este fragmente el usuario ingresara un nuevo producto a la aplicacion, especficara el tipo de transaccion e insertara una foto, desde la camara o desde el equipo</string>
    <string name="finalizar">Finalizar</string>
    <string name="editar">en este fragmento se mostrara un listview con los productos actuales, el usuario seleccionara el producto que desea editar</string>
    <string name="registrarse">Crear usuario</string>
    <string name="titulo">FORMULARIO DE REGISTRO</string>
    <string name="nombre">NOMBRE</string>
    <string name="telefono">TELEFONO</string>
    <string name="genero">GENERO</string>
    <string name="masculino">MASCULINO</string>
    <string name="femenino">FEMENINO</string>
    <string name="fecha_de_nacimiento_label">FECHA DE NACIMIENTO</string>
    <string name="fecha_nacimiento">DD/MM/AAAA</string>
    <string name="c_nacimiento">CIUDAD DE RESIDENCIA </string>
    <string name="hobbies">Pasa Tiempos</string>
    <string name="arte">PINTURA</string>
    <string name="musica">MUSICA</string>
    <string name="vjuegos">CINE</string>
    <string name="lectura">LECTURA</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="repetir_contrasena">REPETIR CONTRASEÑA</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="correo">CORREO:</string>
    <string name="clave">CLAVE</string>
    <string name="I_sesion">INICIAR SESIÓN</string>
    <string name="guardar">GUARDAR</string>
    <string name="autentificacion_fallida">Correo o contraseña errada</string>
    <string name="mal">contraseña errad</string>
    <string name="datos_productos">"en este fragmento se vera una imagen de mayor tamaño del producto, detalles del articulo y un texto del vendedor en el que se daran detalles de la transaccion que este desea. "</string>
    <string name="contactar">Contactar</string>
    <string name="opiniones">opiniones</string>
    <string name="salir">Salir</string>
    <string name="opiniones_usuarios">en este fragmento se vera un list view con las opiniones de los usuarios, y se veran las estadisticas del vendedor</string>
    <string name="contactar_usuario">en este fragmento se veran los datos que el usuario quiere suminustrar para ser contactado, desde correo hasta direccion vinculada en google map</string>
    <string-array name="ciudades">
        <item>MEDELLIN</item>
        <item>CALI</item>
        <item>BOGOTA</item>
        <item>BARRANQUILLA</item>
    </string-array>
</resources>