<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosProductoFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/logo_barter" />

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:src="@drawable/producto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/datos_productos"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibt_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@android:drawable/ic_delete" />

        <Button
            android:id="@+id/bt_contactar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/barter_1"
            android:text="@string/contactar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_opiniones"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@color/barter_2"
            android:text="@string/opiniones"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>