<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TiendaFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/logo_barter" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragmentienda"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibt_agregar"
            android:layout_width="98dp"
            android:layout_height="101dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/agregar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ibt_editar"
            android:layout_width="98dp"
            android:layout_height="95dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/editar"
            app:layout_constraintEnd_toStartOf="@+id/ibt_eliminar"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toEndOf="@+id/ibt_agregar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibt_eliminar"
            android:layout_width="101dp"
            android:layout_height="104dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/eliminar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/barter_2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/mi_tienda"
            android:textColor="@color/barter_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_ofertas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/barter_2"
            android:text="@string/ofertas"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </LinearLayout>
</LinearLayout>