<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OfertasFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/logo_barter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibt11"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/plancha" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="725000"
                android:textColor="@color/darkred"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibt12"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ps4" />

            <TextView
                android:id="@+id/tv12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="725000"
                android:textColor="@color/darkred"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragmentofertas"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/barter_2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_tienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/barter_2"
            android:text="@string/mi_tienda"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/ofertas"
            android:textColor="@color/barter_1"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>